# Mag_2_course_1_Lab

./: .gitignore  CMakeLists.txt  Output.hpp  Readme.md  lab1.cpp  lab1.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  main.cpp  main_lab1.hpp  main_lab2.hpp  main_lab3.hpp
common/: CMakeLists.txt  Output.hpp  cubatureRules.cpp  cubatureRules.h
lab1/: CMakeLists.txt  lab1.h
lab2/: CMakeLists.txt  lab2.cpp  lab2.h  main_lab2.hpp
lab3/: CMakeLists.txt  lab3.cpp  lab3.h
